  (Nicolas Ojeda Bar, review by Gabriel Scherer, David Allsopp, Xavier Leroy)

- GPR#1451: [getpwuid], [getgrgid], [getpwnam], [getgrnam] now raise Unix error
  instead of returning [Not_found] when interrupted by a signal.
  (Arseniy Alekseyev, review by Mark Shinwell and Xavier Leroy)

- GPR#1477: raw_spacetime_lib can now be used in bytecode.
  (Nicolas Ojeda Bar, review by Mark Shinwell)

### Compiler user-interface and warnings:

- GPR#1166: In OCAMLPARAM, an alternative separator can be specified as
  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

- GPR#1428: give a non dummy location for warning 49 (no cmi found)
  (Valentin Gatien-Baron)

- GPR#1472: Improve error reporting for missing 'rec' in let-bindings
  (Arthur Charguéraud and Armaël Guéneau, with help from Gabriel Scherer and
  Frédéric Bour)

- GPR#1491: Improve error reporting for ill-typed applicative functor
  types, F(M).t.
  (Valentin Gatien-Baron, review by Florian Angeletti and Gabriel Radanne)

- GPR#1496: Refactor the code printing explanation for unification type errors,
  in order to avoid duplicating pattern matches
  (Armaël Guéneau, review by Florian Angeletti and Gabriel Scherer)

- GPR#1505: Add specific error messages for unification errors involving
  functions of type "unit -> _"
  (Arthur Charguéraud and Armaël Guéneau, with help from Leo White, review by
  Florian Angeletti and Gabriel Radanne)

- GPR#1534: Extend the warning printed when (*) is used, adding a hint to
  suggest using ( * ) instead
  (Armaël Guéneau, with help and review from Florian Angeletti and Gabriel
  Scherer)

- GPR#1510: Add specific explanation for unification errors caused by type
  constraints propagated by keywords (such as if, while, for...)
  (Armaël Guéneau and Gabriel Scherer, original design by Arthur Charguéraud,
  review by Frédéric Bour, Gabriel Radanne and Alain Frisch)

### Code generation and optimizations:

- GPR#1370: Fix code duplication in Cmmgen