@@ -1,0 +1,5 @@
+# On Windows, we use Sleep(0) for triggering preemption of threads.
+# However, this does not seem very reliable, so that this test fails
+# on some Windows configurations. See GPR #1533.
+
+test "$OS" != "Windows_NT"
